add functional level in car table

--- a/webapp/src/main/resources/templates/fleet/caroptions.html
+++ b/webapp/src/main/resources/templates/fleet/caroptions.html
@@ -24,7 +24,7 @@
             <br/>
             <br/>
 
-<table id="caroptions" >
+<table id="caroptions"   class="display" cellspacing="0" width="100%">
     <thead>
     <tr>
         <th><p th:text="#{option.name}"> Name </p> </th>
