--- a/webapp/src/main/resources/templates/fleet/packs.html
+++ b/webapp/src/main/resources/templates/fleet/packs.html
@@ -25,7 +25,7 @@
             <br/>
 
 
-            <table id="carpacks">
+            <table id="carpacks"   class="display" cellspacing="0" width="100%">
     <thead>
     <tr>
         <th><p th:text="#{pack.name}"> Name </p> </th>
