--- a/webapp/src/main/resources/templates/employees/catalogue.html
+++ b/webapp/src/main/resources/templates/employees/catalogue.html
@@ -17,56 +17,57 @@
     <div class="row">
         <div class="col-lg-12">
             <h2><p th:text="#{catalogue.catalogue}">Catalogue </p></h2>
-
-            <div style="width: 100%; float:left; margin-bottom: 5px;">
-                <form method="get" th:action="@{/employees/catalogue/filter}" th:object="${filter}">
-                    <div style="width: 49%; float:left;">
-                        <span style="font-weight:bold;"><p th:text="#{car.brand}">Brand</p> </span>
-                        <input id="brand" name="brand" type="text" th:field="*{brand}" onblur="submit()" class="form-control"/>
-                        <span style="font-weight:bold;"><p th:text="#{car.model}">model</p> </span>
-                        <input id="carModel" name="carModel" type="text" th:field="*{model}" onblur="submit()" class="form-control"/><br/>
+            <div id="catalog">
+                <h3><span th:text="#{catalogue.possibletoorder}">Possible To Order</span></h3>
+                <small> - <a href="#catalog-inner" data-toggle="collapse" th:text="#{hide-show}">Hide/Show</a>
+                </small>
+                <div id="catalog-inner" class="collapse in">
+                    <div style="width: 100%; float:left; margin-bottom: 5px;">
+                        <form method="get" th:action="@{/employees/catalogue/filter}" th:object="${filter}">
+                            <div style="width: 49%; float:left;">
+                                <span style="font-weight:bold;"><p th:text="#{car.brand}">Brand</p> </span>
+                                <input id="brand" name="brand" type="text" th:field="*{brand}" onblur="submit()"
+                                       class="form-control"/>
+                                <span style="font-weight:bold;"><p th:text="#{car.model}">model</p> </span>
+                                <input id="carModel" name="carModel" type="text" th:field="*{model}" onblur="submit()"
+                                       class="form-control"/><br/>
+                            </div>
+                            <div style="width: 49%; float:right;">
+                                <span style="font-weight:bold;"><p th:text="#{selectcar.funclevel}">func
+                                    level</p> </span>
+                                <input type="number" min="1" max="8" th:field="*{functionalLevel}" onblur="submit()"
+                                       class="form-control"/>
+                            </div>
+                        </form>
                     </div>
-                    <div style="width: 49%; float:right;">
-                        <span style="font-weight:bold;"><p th:text="#{selectcar.funclevel}">func level</p> </span>
-                        <input type="number" min="1" max="8" th:field="*{functionalLevel}" onblur="submit()" class="form-control"/>
 
+                    <hr/>
 
-
-                        <!-- <input name="level" id="allPossible" value="allPossible" type="radio" th:field="*{level}"
-                               onclick="submit()"/><span th:text="#{selectcar.allpossible}">All
-                    Possible</span>
-                        <input name="level" id="downgrade" value="downgrade" type="radio" th:field="*{level}"
-                               onclick="submit()"/><span th:text="#{selectcar.downgrade}">Downgrade</span>
-                        <input name="level" id="myLevel" value="myLevel" type="radio" th:field="*{level}"
-                               onclick="submit()"/><span th:text="#{selectcar.mylevel}">My Level</span>
-                        <input name="level" id="upgrade" value="upgrade" type="radio" th:field="*{level}"
-                               onclick="submit()"/><span th:text="#{selectcar.upgrade}">Upgrade</span><br/>-->
-                    </div>
-                </form>
-            </div>
-
-            <hr/>
-
-            <div style="width: 100%; float:left;">
+                    <div style="width: 100%; float:left;">
                 <span th:if="${catalogueCars.isEmpty()}">
                 <p th:text="#{selectcar.nomatch}">No match</p>
                 </span>
 
-                <table class="table" th:if="${!catalogueCars.isEmpty()}">
-                    <tbody>
-                    <tr th:each="carList  : ${catalogueCars}">
-                        <td th:each="car : ${carList}" style="text-align: center;">
-                            <span th:text="${car.brand + ' ' + car.model}" style="font-weight: bold;">carTitle</span>
-                            <br/>
-                            <a th:href="${'/employees/catalogue/detail?id=' + car.id}">
-                                <img th:src="${car.pictures[0]}" height="200" width="250" class="img-thumbnail"/>
-                            </a>
-                            <p><span th:text="#{catalogue.funclvl}">Functional level</span>: <span th:text="${car.category}">category</span> </p>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
+                        <table class="table" th:if="${!catalogueCars.isEmpty()}">
+                            <tbody>
+                            <tr th:each="carList  : ${catalogueCars}">
+                                <td th:each="car : ${carList}" style="text-align: center;">
+                                    <span th:text="${car.brand + ' ' + car.model}"
+                                          style="font-weight: bold;">carTitle</span>
+                                    <br/>
+                                    <a th:href="${'/employees/catalogue/detail?id=' + car.id}">
+                                        <img th:src="${car.pictures[0]}" height="200" width="250"
+                                             class="img-thumbnail"/>
+                                    </a>
 
+                                    <p><span th:text="#{catalogue.funclvl}">Functional level</span>: <span
+                                            th:text="${car.category}">category</span></p>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
 
                 <hr/>
 
@@ -83,6 +84,7 @@
                             <a th:href="${'/employees/catalogue/detail-from-free-pool?id=' + carUsage.id}">
                                 <img th:src="${carUsage.orderedCar.car.pictures[0]}" height="200" width="250"
                                      class="img-thumbnail"/></a>
+
                             <p th:text="#{selectcar.color}"> Color</p> <span
                                 th:text="${carUsage.orderedCar.color}">carColor</span>
 
