--- a/webapp/src/main/resources/templates/fleet/confirm-order-from-free-pool-detail.html
+++ b/webapp/src/main/resources/templates/fleet/confirm-order-from-free-pool-detail.html
@@ -14,7 +14,7 @@
             <form method="post" action="#" th:action="@{/fleet/disallow-order}">
                 <div id="disallowOrder">
                     <input type="hidden" id="orderId" name="orderId" th:value="${confirmedOrderDTO.getOrderId()}"/>
-                    <input type="submit" value="Disallow Order" class="btn btn-primary form-control"/>
+                    <input type="submit" value="Disallow Order" class="btn btn-danger form-control"/>
                 </div>
             </form>
 
